some clean ups
